--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,18 +1,12 @@
-apply plugin: 'com.android.application' 
-
+plugins { id 'com.android.application' }
 android {
+    namespace 'com.ds2.terminal'
     compileSdk 34
-
     defaultConfig {
-        applicationId "com.example.app"
-        minSdk 21
+        applicationId "com.ds2.terminal"
+        minSdk 24
         targetSdk 34
         versionCode 1
         versionName "1.0"
     }
-}
-
-dependencies {
-    implementation 'androidx.appcompat:appcompat:1.3.1'
-    implementation 'com.google.android.material:material:1.4.0'
 }
