Switching to cloud-managed Gradle engine

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,4 +1,5 @@
-# Gradle Wrapper Properties
-
-# Distribution URL for the Gradle version used in the project.
-distributionUrl=https\://services.gradle.org/distributions/gradle-7.2-bin.zip
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.4-all.zip
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
