--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,10 +10,13 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Build Gradle Wrapper
-        run: gradle wrapper # This generates the missing engine
+      - name: Setup Gradle
+        uses: gradle/gradle-build-action@v2
+        with:
+          gradle-version: 8.4
+
       - name: Build APK
-        run: ./gradlew assembleDebug
+        run: gradle assembleDebug
       - name: Upload Binary
         uses: actions/upload-artifact@v4
         with:
