--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,22 +5,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: set up JDK 17
+      - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
-      - name: Setup Gradle
-        uses: gradle/gradle-build-action@v2
-        with:
-          gradle-version: 8.4
-
-      - name: Build APK
-        run: gradle assembleDebug
-      - name: Upload Binary
+      - name: Build with Gradle
+        run: |
+          gradle assembleDebug
+      - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: DS2-Terminal-Package
           path: app/build/outputs/apk/debug/app-debug.apk
-- name: Build APK
-        run: ./gradlew clean assembleDebug
